--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>Bug reproducer</description>
 	<properties>
 		<java.version>11</java.version>
-		<camel.version>3.18.3</camel.version>
+		<camel.version>3.20.1</camel.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -33,11 +33,11 @@
 			<artifactId>camel-kafka-starter</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
-         <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-resilience4j</artifactId>
+		 <dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-resilience4j</artifactId>
 			 <version>${camel.version}</version>
-        </dependency>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -54,5 +54,19 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>apache.snapshots</id>
+			<name>Apache Development Snapshot Repository</name>
+			<url>https://repository.apache.org/content/repositories/snapshots/</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 
 </project>
